--- a/cart.html
+++ b/cart.html
@@ -15,127 +15,135 @@
 </head>
 
 <body>
-        <div id="headerdiv">
-                <div id="headerdivleftsideimg">
-                        <img src="images/logoforheader.png" alt="logo for header" width="289" height="60">
+        <div id="container">
+                <div id="headerdiv">
+                        <div id="headerdivleftsideimg">
+                                <a href="home.html">
+                                        <img src="images/logoforheader.png" alt="logo for header" width="289"
+                                                height="60">
+                                </a>
+                        </div>
+                        <div id="headerdivrightsidenavbar1">
+                                <nav>
+                                        <a href="home.html">HOME</a>
+                                        <a href="menu.html">MENU</a>
+                                        <a href="cart.html"
+                                                style="background:rgb(210, 32, 48); padding: 10px; color: white; margin: 12px; text-shadow: 1px 1px 1px #000000;">CART</a>
+                                        <a href="contact.html">CONTACT</a>
+                                </nav>
+                        </div>
                 </div>
-                <div id="headerdivrightsidenavbar1">
-                        <nav>
-                                <a href="home.html">HOME</a>
-                                <a href="menu.html">MENU</a>
-                                <a href="cart.html">CART</a>
-                                <a href="contact.html">CONTACT</a>
-                        </nav>
+
+
+                <div style="float: left; color: white; margin-top: 50px; margin-left: 50px">
+                        <h2>Your cart is empty. </h2>
+                        <ol style="margin: 20px; list-style-type: none">
+                                <li><input type="checkbox" id="zingerburger" value="zingerburger"> <span>&nbsp; &nbsp;
+                                                Zinger
+                                                Burger &nbsp; &nbsp; $5.99</span></li>
+                                <li><input type="checkbox" id="bunkabab" value="bunkabab"> <span> &nbsp; &nbsp; Bun
+                                                Kabab &nbsp;
+                                                &nbsp; $5.99</span></li>
+                        </ol>
+                        <input type="submit" value="Submit" class="submitButtonCart" onclick="pickupAtTheStore()" />
                 </div>
+
+                <div style="float: right">
+
+                </div>
+
+                <div class="clear">
+
+                </div>
+
+                <div style="visibility: hidden">
+
+                        ek
+                        2
+                        3
+                        <br />
+                        <br />
+                        ek
+                        2
+                        3
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        ek
+                        2
+                        3
+                        <br />
+                        <br />
+                        ek
+                        2
+                        3
+                        <br />
+                        <br />
+                        ek
+                        2
+                        3
+                        <br />
+                        <br />
+                </div>
+
+
+
+                <footer id=footerdiv
+                        style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
+                        <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
+                                <nav>
+                                        <a style="color: gray;" href="home.html">HOME</a>
+                                        <a style="color: gray;" href="menu.html">MENU</a>
+                                        <a style="color: gray;" href="cart.html">CART</a>
+                                        <a style="color: gray;" href="contact.html">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div class="clear"></div>
+                        <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                </nav>
+                        </div>
+                        <div>
+                                <img src="images/creditcardpicture" alt="">
+                        </div>
+                </footer>
         </div>
-
-
-        <div style="float: left; color: white; margin-top: 50px; margin-left: 50px">
-                <h2>Your cart is empty. </h2>
-                <ol style="margin: 20px; list-style-type: none">
-                        <li><input type="checkbox" id="zingerburger" value="zingerburger"> <span>&nbsp; &nbsp; Zinger
-                                        Burger &nbsp; &nbsp; $5.99</span></li>
-                        <li><input type="checkbox" id="bunkabab" value="bunkabab"> <span> &nbsp; &nbsp; Bun Kabab &nbsp;
-                                        &nbsp; $5.99</span></li>
-                </ol>
-                <input type="submit" value="Submit" class="submitButtonCart" onclick="pickupAtTheStore()" />
-        </div>
-
-        <div style="float: right">
-
-        </div>
-
-        <div class="clear">
-
-        </div>
-
-        <div style="visibility: hidden">
-
-                ek
-                2
-                3
-                <br />
-                <br />
-                ek
-                2
-                3
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                ek
-                2
-                3
-                <br />
-                <br />
-                ek
-                2
-                3
-                <br />
-                <br />
-                ek
-                2
-                3
-                <br />
-                <br />
-        </div>
-
-
-
-        <footer id=footerdiv style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
-                <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
-                        <nav>
-                                <a style="color: gray;" href="home.html">HOME</a>
-                                <a style="color: gray;" href="menu.html">MENU</a>
-                                <a style="color: gray;" href="cart.html">CART</a>
-                                <a style="color: gray;" href="contact.html">CONTACT</a>
-                        </nav>
-                </div>
-                <div class="clear"></div>
-                <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                        </nav>
-                </div>
-                <div>
-                        <img src="images/creditcardpicture" alt="">
-                </div>
-        </footer>
-
         <script src="scripts/commonUtil.js"></script>
 </body>
 
