--- a/contact.html
+++ b/contact.html
@@ -14,95 +14,102 @@
 </head>
 
 <body>
-        <div id="headerdiv">
-                <div id="headerdivleftsideimg">
-                        <img src="images/logoforheader.png" alt="logo for header" width="289" height="60">
-                </div>
-                <div id="headerdivrightsidenavbar1">
-                        <nav>
-                                <a href="home.html">HOME</a>
-                                <a href="menu.html">MENU</a>
-                                <a href="cart.html">CART</a>
-                                <a href="contact.html">CONTACT</a>
-                        </nav>
-                </div>
-        </div>
-
-        <div style="color: white; margin-top: 50px; margin-left: 50px; font-size: 30px">
-                <ol style="list-style-type:none;">
-                        <li>Phone Number # 800-420-9211</li>
-                        <li>Email - bestburgers@chicago.org</li>
-                        <li>Address - 999 Boulevard Road, Chicago, IL, 60209</li>
-                </ol>
-        </div>
-
-        <div id="formdiv" style="color: white; margin-top: 50px; margin-left: 50px; font-size: 20px">
-                <h4>To Send a message directly, fill out the form below:</h4>
-                <form method="GET" action="menu.html" onsubmit="return validateForm()">
-                        <div>
-                                <br />
-                                Name: <br />
-                                <input type="text" id="contactName" size="30">
-                                <br />
-                                Email: <br />
-                                <input type="email" id="contactEmail" size="30" required>
-                                <br />
-                                Message: <br />
-                                <textarea id="contactMessage" cols="30" rows="10"></textarea>
-                                <br />
-                                <input type="submit" value="Submit" class="submitButtonCart" />
-                                <br />
-                                <br />
-                                <br />
-                                <br />
+        <div id="container">
+                <div id="headerdiv">
+                        <div id="headerdivleftsideimg">
+                                <a href="home.html">
+                                        <img src="images/logoforheader.png" alt="logo for header" width="289"
+                                                height="60">
+                                </a>
                         </div>
-                </form>
-        </div>
+                        <div id="headerdivrightsidenavbar1">
+                                <nav>
+                                        <a href="home.html">HOME</a>
+                                        <a href="menu.html">MENU</a>
+                                        <a href="cart.html">CART</a>
+                                        <a href="contact.html"
+                                                style="background:rgb(210, 32, 48); padding: 10px; color: white; margin: 12px; text-shadow: 1px 1px 1px #000000;">CONTACT</a>
+                                </nav>
+                        </div>
+                </div>
 
-        <footer id=footerdiv style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px">
-                <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
+                <div style="color: white; margin-top: 50px; margin-left: 50px; font-size: 30px">
+                        <ol style="list-style-type:none;">
+                                <li>Phone Number # 800-420-9211</li>
+                                <li>Email - bestburgers@chicago.org</li>
+                                <li>Address - 999 Boulevard Road, Chicago, IL, 60209</li>
+                        </ol>
                 </div>
-                <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
+
+                <div id="formdiv" style="color: white; margin-top: 50px; margin-left: 50px; font-size: 20px">
+                        <h4>To Send a message directly, fill out the form below:</h4>
+                        <form method="GET" action="menu.html" onsubmit="return validateForm()">
+                                <div>
+                                        <br />
+                                        Name: <br />
+                                        <input type="text" id="contactName" size="30">
+                                        <br />
+                                        Email: <br />
+                                        <input type="email" id="contactEmail" size="30" required>
+                                        <br />
+                                        Message: <br />
+                                        <textarea id="contactMessage" cols="30" rows="10"></textarea>
+                                        <br />
+                                        <input type="submit" value="Submit" class="submitButtonCart" />
+                                        <br />
+                                        <br />
+                                        <br />
+                                        <br />
+                                </div>
+                        </form>
                 </div>
-                <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
-                        <nav>
-                                <a style="color: gray;" href="home.html">HOME</a>
-                                <a style="color: gray;" href="menu.html">MENU</a>
-                                <a style="color: gray;" href="cart.html">CART</a>
-                                <a style="color: gray;" href="contact.html">CONTACT</a>
-                        </nav>
-                </div>
-                <div class="clear"></div>
-                <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                        </nav>
-                </div>
-                <div>
-                        <img src="images/creditcardpicture" alt="">
-                </div>
-        </footer>
+
+                <footer id=footerdiv
+                        style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px">
+                        <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
+                                <nav>
+                                        <a style="color: gray;" href="home.html">HOME</a>
+                                        <a style="color: gray;" href="menu.html">MENU</a>
+                                        <a style="color: gray;" href="cart.html">CART</a>
+                                        <a style="color: gray;" href="contact.html">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div class="clear"></div>
+                        <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                </nav>
+                        </div>
+                        <div>
+                                <img src="images/creditcardpicture" alt="">
+                        </div>
+                </footer>
+        </div>
         <script src="scripts/commonUtil.js"></script>
 </body>
 
