--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
 <head>
         <title>Best Burgers!</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
         <link rel="shortcut icon" href="images/favicon.ico">
         <link rel="stylesheet" href="css/styles.css">
         <script src="scripts/commonUtil.js"></script>
@@ -15,95 +18,99 @@
 </head>
 
 <body onload="showPizzaLine()">
-        <div id="headerdiv">
-                <div id="headerdivleftsideimg">
-                        <img src="images/logoforheader.png" alt="logo for header" width="289" height="60">
+
+        <div id="container">
+
+                <div id="headerdiv">
+                        <div id="headerdivleftsideimg">
+                                <a href="home.html">
+                                        <img src="images/logoforheader.png" alt="logo for header" width="289"
+                                                height="60">
+                                </a>
+                        </div>
+                        <div id="headerdivrightsidenavbar1">
+                                <nav>
+                                        <a href="home.html"
+                                                style="background:rgb(210, 32, 48); padding: 10px; color: white; margin: 12px; text-shadow: 1px 1px 1px #000000;">HOME</a>
+                                        <a href="menu.html">MENU</a>
+                                        <a href="cart.html">CART</a>
+                                        <a href="contact.html">CONTACT</a>
+                                </nav>
+                        </div>
                 </div>
-                <div id="headerdivrightsidenavbar1">
-                        <nav>
-                                <a href="home.html">HOME</a>
-                                <a href="menu.html">MENU</a>
-                                <a href="cart.html">CART</a>
-                                <a href="contact.html">CONTACT</a>
-                        </nav>
+
+
+                <div id=comeforpizza>
+
+                </div>
+
+                <div style="background-color: white">
+                        <div class="slider">
+                                <div><img src="images/burgersmainphoto.png" alt="Burger Main Photo"></div>
+                                <div><img src="images/Appetizers.jpg" alt="Appetizers"></div>
+                                <div><img src="images/Drinks.jpg" alt="Drinks"></div>
+                                <div><img src="images/we-deliver.jpg" alt="we-deliver"></div>
+                        </div>
+
+                        <div id="burgermainphoto" style="background-color: white; margin: 70px; height: 120px;">
+                                <a href="menu.html">
+                                        <img src="images/printtakeoutdelivery.png" alt="gotomenu">
+                                </a>
+                                <a href="#" onclick="alert('no deals at this time. Check again')">
+                                        <img src="images/couponsanddeals.png" alt="gotodeals">
+                                </a>
+                                <a href="contact.html">
+                                        <img src="images/locations.png" alt="gotocontacts">
+                                </a>
+                        </div>
+
+                        <div id=footerdiv style="background-color: black; height: 100px;">
+                                <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
+                                        <nav>
+                                                <a href="">HOME</a>
+                                                <a href="">MENU</a>
+                                                <a href="">CART</a>
+                                                <a href="">CONTACT</a>
+                                        </nav>
+                                </div>
+                                <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
+                                        <nav>
+                                                <a href="">HOME</a>
+                                                <a href="">MENU</a>
+                                                <!-- <a href="">CART</a>
+                                                        <a href="">CONTACT</a> -->
+                                        </nav>
+                                </div>
+                                <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
+                                        <nav>
+                                                <a style="color: gray;" href="home.html">HOME</a>
+                                                <a style="color: gray;" href="menu.html">MENU</a>
+                                                <a style="color: gray;" href="cart.html">CART</a>
+                                                <a style="color: gray;" href="contact.html">CONTACT</a>
+                                        </nav>
+                                </div>
+                                <div class="clear"></div>
+                                <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
+                                        <nav>
+                                                <a href="">HOME</a>
+                                                <a href="">MENU</a>
+                                                <a href="">CART</a>
+                                                <a href="">CONTACT</a>
+                                        </nav>
+                                </div>
+                                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
+                                        <nav>
+                                                <!-- <a href="">HOME</a> -->
+                                                <a href="">MENU</a>
+                                        </nav>
+                                </div>
+                                <div>
+                                        <img src="images/creditcardpicture" alt="">
+                                </div>
+                        </div>
                 </div>
         </div>
 
-
-        <div id=comeforpizza>
-
-        </div>
-
-        <div id="burgermainphoto" style="margin-left: 50px; margin-right: 20px;">
-                <img src="images/burgersmainphoto.png" alt="Burger Main Photo">
-        </div>
-
-        <div class="clear">
-
-        </div>
-
-        <div style="visibility: hidden">
-
-                ek
-                2
-                3
-                <br />
-                <br />
-                ek
-                2
-                3
-                <br />
-                <br />
-                <br />
-
-        </div>
-
-
-
-        <footer id=footerdiv style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
-                <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
-                        <nav>
-                                <a style="color: gray;" href="home.html">HOME</a>
-                                <a style="color: gray;" href="menu.html">MENU</a>
-                                <a style="color: gray;" href="cart.html">CART</a>
-                                <a style="color: gray;" href="contact.html">CONTACT</a>
-                        </nav>
-                </div>
-                <div class="clear"></div>
-                <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                        </nav>
-                </div>
-                <div>
-                        <img src="images/creditcardpicture" alt="">
-                </div>
-        </footer>
 </body>
 
 </html>
