--- a/menu.html
+++ b/menu.html
@@ -15,147 +15,163 @@
 </head>
 
 <body onload="showOfferOnWeekdays()">
-        <div id="headerdiv">
-                <div id="headerdivleftsideimg">
-                        <img src="images/logoforheader.png" alt="logo for header" width="289" height="60">
+
+        <div id="container">
+
+                <div id="headerdiv">
+                        <div id="headerdivleftsideimg">
+                                <a href="home.html">
+                                        <img src="images/logoforheader.png" alt="logo for header" width="289"
+                                                height="60">
+                                </a>
+                        </div>
+                        <div id="headerdivrightsidenavbar1">
+                                <nav>
+                                        <a href="home.html">HOME</a>
+                                        <a href="menu.html"
+                                                style="background:rgb(210, 32, 48); padding: 10px; color: white; margin: 12px; text-shadow: 1px 1px 1px #000000;">MENU</a>
+                                        <a href="cart.html">CART</a>
+                                        <a href="contact.html">CONTACT</a>
+                                </nav>
+                        </div>
                 </div>
-                <div id="headerdivrightsidenavbar1">
-                        <nav>
-                                <a href="home.html">HOME</a>
-                                <a href="menu.html">MENU</a>
-                                <a href="cart.html">CART</a>
-                                <a href="contact.html">CONTACT</a>
-                        </nav>
+
+
+                <div id=ourmenudiv
+                        style="color: black; font-size: 20px; text-align: center; margin-top: 30px; margin-bottom: 30px">
+                        <i>Our Menu</i>
                 </div>
-        </div>
 
+                <div id=burgersandsandwichesdiv style="background: white; margin: 50px">
+                        <h1 style="color: red"><u>Burgers & Sandwiches</u></h1>
+                        <div id="showThisOfferOnWeekdays"
+                                style="text-align: center; margin-left: 20px; margin-right: 20px">
 
-        <div id=ourmenudiv
-                style="color: black; font-size: 20px; text-align: center; margin-top: 30px; margin-bottom: 30px">
-                <i>Our Menu</i>
-        </div>
-
-        <div id=burgersandsandwichesdiv style="background: white; margin: 50px">
-                <h1 style="color: red"><u>Burgers & Sandwiches</u></h1>
-                <div id="showThisOfferOnWeekdays" style="text-align: center; margin-left: 20px; margin-right: 20px">
-
-                </div>
-                <div style="float: left; background: white">
-                        <div style="float: left; margin: 60px">
-                                <div
-                                        style="color: rgb(191,162,101); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
-                                        <h4>ZINGER BURGER</h4>
-                                        <div class="clear"></div>
-                                        <div style="float: left">
-                                                <img src="images/zingerburger.png" alt="zingerburger">
-                                        </div>
-                                        <div style="float: right">
-                                                <p style="color: black"> &nbsp; &nbsp; Well seasoned fried chicken patty
-                                                </p>
-                                                <p style="color: black"> &nbsp; &nbsp; layered with our special homemade
-                                                        sauce</p>
-                                                <p style="color: black"> &nbsp; &nbsp; good old mayo with lettuce and
-                                                        onions on a </p>
-                                                <p style="color: black"> &nbsp; &nbsp; seasoned bun.</p>
-                                                <p style="color: red">&nbsp; &nbsp; $5.99</p>
+                        </div>
+                        <div style="float: left; background: white">
+                                <div style="float: left; margin: 60px">
+                                        <div
+                                                style="color: rgb(191,162,101); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
+                                                <h4>ZINGER BURGER</h4>
+                                                <div class="clear"></div>
+                                                <div style="float: left">
+                                                        <img src="images/zingerburger.png" alt="zingerburger">
+                                                </div>
+                                                <div style="float: right">
+                                                        <p style="color: black"> &nbsp; &nbsp; Well seasoned fried
+                                                                chicken patty
+                                                        </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; layered with our special
+                                                                homemade
+                                                                sauce</p>
+                                                        <p style="color: black"> &nbsp; &nbsp; good old mayo with
+                                                                lettuce and
+                                                                onions on a </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; seasoned bun.</p>
+                                                        <p style="color: red">&nbsp; &nbsp; $5.99</p>
+                                                </div>
                                         </div>
                                 </div>
                         </div>
-                </div>
-                <div style="float: left; background: white">
-                        <div style="float: left; margin: 60px">
-                                <div
-                                        style="color: rgb(191,162,101); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
-                                        <h4>BUN KABAB</h4>
-                                        <div class="clear"></div>
-                                        <div style="float: left">
-                                                <img src="images/bunkabab.png" alt="bunkabab">
-                                        </div>
-                                        <div style="float: right">
-                                                <p style="color: black"> &nbsp; &nbsp; A tradional Pakistani burger. A
-                                                        well done beef
-                                                </p>
-                                                <p style="color: black"> &nbsp; &nbsp; patty covered with home made
-                                                        spices,</p>
-                                                <p style="color: black"> &nbsp; &nbsp; topped with some veggies and a
-                                                </p>
-                                                <p style="color: black"> &nbsp; &nbsp; special green sauce (chutni).</p>
-                                                <p style="color: red">&nbsp; &nbsp; $5.99</p>
+                        <div style="float: left; background: white">
+                                <div style="float: left; margin: 60px">
+                                        <div
+                                                style="color: rgb(191,162,101); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">
+                                                <h4>BUN KABAB</h4>
+                                                <div class="clear"></div>
+                                                <div style="float: left">
+                                                        <img src="images/bunkabab.png" alt="bunkabab">
+                                                </div>
+                                                <div style="float: right">
+                                                        <p style="color: black"> &nbsp; &nbsp; A tradional Pakistani
+                                                                burger. A
+                                                                well done beef
+                                                        </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; patty covered with home
+                                                                made
+                                                                spices,</p>
+                                                        <p style="color: black"> &nbsp; &nbsp; topped with some veggies
+                                                                and a
+                                                        </p>
+                                                        <p style="color: black"> &nbsp; &nbsp; special green sauce
+                                                                (chutni).</p>
+                                                        <p style="color: red">&nbsp; &nbsp; $5.99</p>
+                                                </div>
                                         </div>
                                 </div>
                         </div>
+                        <div style="float: left; background: white; height: 280px; width: 66px">
+                        </div>
                 </div>
-                <div style="float: left; background: white; height: 280px; width: 66px">
+
+                <div class="clear">
+
                 </div>
+
+                <div style="visibility: hidden">
+
+                        ek
+                        2
+                        3
+                        <br />
+                        <br />
+                        ek
+                        2
+                        3
+                        <br />
+                        <br />
+                        <br />
+
+                </div>
+
+
+
+                <footer id=footerdiv
+                        style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
+                        <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
+                                <nav>
+                                        <a style="color: gray;" href="home.html">HOME</a>
+                                        <a style="color: gray;" href="menu.html">MENU</a>
+                                        <a style="color: gray;" href="cart.html">CART</a>
+                                        <a style="color: gray;" href="contact.html">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div class="clear"></div>
+                        <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                        <a href="">CART</a>
+                                        <a href="">CONTACT</a>
+                                </nav>
+                        </div>
+                        <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
+                                <nav>
+                                        <a href="">HOME</a>
+                                        <a href="">MENU</a>
+                                </nav>
+                        </div>
+                        <div>
+                                <img src="images/creditcardpicture" alt="">
+                        </div>
+                </footer>
         </div>
-
-        <div class="clear">
-
-        </div>
-
-        <div style="visibility: hidden">
-
-                ek
-                2
-                3
-                <br />
-                <br />
-                ek
-                2
-                3
-                <br />
-                <br />
-                <br />
-
-        </div>
-
-
-
-        <footer id=footerdiv style="background-color: black; height: 100px; margin-left: 30px; margin-right: 30px;">
-                <div id="headerdivrightsidenavbar2" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar3" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar4" style="float: left; visibility: visible;">
-                        <nav>
-                                <a style="color: gray;" href="home.html">HOME</a>
-                                <a style="color: gray;" href="menu.html">MENU</a>
-                                <a style="color: gray;" href="cart.html">CART</a>
-                                <a style="color: gray;" href="contact.html">CONTACT</a>
-                        </nav>
-                </div>
-                <div class="clear"></div>
-                <div id="headerdivrightsidenavbar5" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                                <a href="">CART</a>
-                                <a href="">CONTACT</a>
-                        </nav>
-                </div>
-                <div id="headerdivrightsidenavbar6" style="float: left; visibility: hidden;">
-                        <nav>
-                                <a href="">HOME</a>
-                                <a href="">MENU</a>
-                        </nav>
-                </div>
-                <div>
-                        <img src="images/creditcardpicture" alt="">
-                </div>
-        </footer>
-
         <script src="scripts/commonUtil.js"></script>
 </body>
 
